Bug 257581 Cursor (caret) doesn't appear in MailNews Compose Window, although you type something r=daniel, sr=roc, patch=ginn.chen@sun.com